--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.diamond-icon {
+  width: 60px;
+  height: 100px;
+}
+
+.title {
+  font-size: 40pt;
+}
+
+.subtitle {
+  font-size: 18pt;
+}
+
+.title-view {
+  gap: 30px;
+}
+
+@media (max-width: 600px) {
+  .diamond-icon {
+    width: 30px;
+    height: 50px;
+  }
+
+  .title {
+    font-size: 24pt;
+  }
+
+  .title-view {
+    gap: 15px;
+  }
+
+  .subtitle {
+    margin-right: 40px;
+    margin-top: 20px;
+    font-size: 12pt;
+  }
+}
