--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: black;
 }
 
 code {
@@ -37,6 +38,12 @@ code {
   font-size: 16pt;
 }
 
+.privacy-txt {
+  width: 50vw;
+  padding-top: 10vh;
+  color: rgb(0,255,255);
+}
+
 @media (max-width: 600px) {
   .diamond-icon {
     width: 30px;
@@ -59,11 +66,15 @@ code {
 
   .feedback-box {
     font-size: 11pt;
-    /* margin-bottom: 30px; */
   }
 
   .send-btn {
     font-size: 11pt;
     margin-bottom: 60px;
+  }
+
+  .privacy-txt {
+    width: 75vw;
+    padding-top: 0;
   }
 }
