--- a/src/App.css
+++ b/src/App.css
@@ -14,67 +14,29 @@ code {
 }
 
 .diamond-icon {
-  width: 60px;
-  height: 100px;
+  width: 30px;
+  height: 50px;
 }
 
 .title {
-  font-size: 40pt;
-}
-
-.subtitle {
-  font-size: 18pt;
+  font-size: 30pt;
 }
 
 .title-view {
   gap: 30px;
 }
 
-.feedback-box {
-  font-size: 14pt;
-}
-
-.send-btn {
-  font-size: 16pt;
-}
-
-.privacy-txt {
-  width: 50vw;
-  padding-top: 10vh;
-  color: rgb(0,255,255);
-}
-
 @media (max-width: 600px) {
   .diamond-icon {
-    width: 30px;
-    height: 50px;
+    width: 15px;
+    height: 25px;
   }
 
   .title {
-    font-size: 24pt;
+    font-size: 15px;
   }
 
   .title-view {
     gap: 15px;
-  }
-
-  .subtitle {
-    margin-right: 40px;
-    margin-top: 20px;
-    font-size: 12pt;
-  }
-
-  .feedback-box {
-    font-size: 11pt;
-  }
-
-  .send-btn {
-    font-size: 11pt;
-    margin-bottom: 60px;
-  }
-
-  .privacy-txt {
-    width: 75vw;
-    padding-top: 0;
   }
 }
