--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,8 @@ code {
 .video {
   width: 30%;
   max-width: 200px;
+  border-radius: 24px;
+  box-shadow: 0px 0px 14px rgb(0,255,255);
 }
 
 @media (max-width: 600px) {
