--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@ code {
   gap: 20px;
 }
 
+.suits {
+  color: rgb(0,255,255);
+  font-size: 2rem;
+}
+
 .video {
   width: 30%;
   max-width: 200px;
